--- a/query.css
+++ b/query.css
@@ -31,9 +31,117 @@
     display: none;
   }
 
+  .header-controls .icon-btn2 {
+    background: var(--grey-light-1);
+    border: none;
+    border-radius: 10px;
+    padding: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 20px;
+  }
+
   .date-display {
     text-align: right;
     display: none;
+  }
+
+  .task-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+}
+
+/* Smaller phones */
+@media screen and (max-width: 380px) {
+  .sidebar {
+    width: 500px;
+    background: var(--primary-red);
+    color: var(--white);
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 260px;
+    display: none;
+  }
+
+  .dashboard-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .header-controls .icon-btn {
+    background: var(--grey-light-1);
+    border: none;
+    border-radius: 10px;
+    padding: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 20px;
+    display: none;
+  }
+
+  .header-controls .icon-btn2 {
+    background: var(--grey-light-1);
+    border: none;
+    border-radius: 10px;
+    padding: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 20px;
+  }
+
+  .date-display {
+    text-align: right;
+    display: none;
+  }
+
+  .task-media {
+    display: none;
+    gap: 1rem;
+  }
+
+  .task-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  .main-header h1 {
+    font-size: 1.75rem;
+    font-weight: 700;
+    color: var(--black);
+    display: none;
+  }
+
+  .team-invite {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    row-gap: 1rem;
+  }
+
+  .status-charts {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 1.5rem;
+  }
+
+  .task-details {
+    width: 100rem;
   }
 }
 
